# ace-lang

./: .gitignore  Athens.sln  CMakeLists.txt  README.md  a.out  build.bat  build.py  build.sh  run-script.bat  run-script.sh  test.txt  tmp.aex
AthensCompiler/: AthensCompiler.filters  AthensCompiler.vcxproj  ast_iterator.cpp  ast_iterator.h  ast_visitor.cpp  ast_visitor.h  compilation_unit.cpp  compilation_unit.h  compiler_error.cpp  compiler_error.h  error_list.cpp  error_list.h  identifier.cpp  identifier.h  identifier_table.cpp  identifier_table.h  main.cpp  module.cpp  module.h  scope.cpp  scope.h  semantic_analyzer.cpp  semantic_analyzer.h  source_file.cpp  source_file.h  source_location.cpp  source_location.h  source_stream.cpp  source_stream.h  stack_tree.h
acelib/: error  io  math  meta  misc  random  range  stopwatch  structures  thread  traits
docs/: built-in-libraries.md  built-in-modules.md  installation.md  syntax.md
examples/: async.ace  bitwise.ace  car.ace  car.aex  counter.ace  decompile.ace  decompile.aex  events.ace  events.aex  files.ace  (+29 more)
src/: CMakeLists.txt  ast_iterator.cpp  ast_visitor.cpp  compilation_unit.cpp  compiler_error.cpp  error_list.cpp  identifier.cpp  identifier_table.cpp  keywords.cpp  lexer.cpp  main.cpp  module.cpp  operator.cpp  optimizer.cpp  parser.cpp  scope.cpp  semantic_analyzer.cpp  source_file.cpp  source_location.cpp  source_stream.cpp  token.cpp  token_stream.cpp
src/ace/: API.cpp  CMakeLists.txt  Runtime.cpp  api.cpp  main.cpp  runtime.cpp
src/ace-c/: AstIterator.cpp  AstVisitor.cpp  CMakeLists.txt  CompilationUnit.cpp  Compiler.cpp  CompilerError.cpp  Configuration.cpp  ErrorList.cpp  Identifier.cpp  IdentifierTable.cpp  Keywords.cpp  Lexer.cpp  Minifier.cpp  Module.cpp  ObjectType.cpp  Operator.cpp  Optimizer.cpp  Parser.cpp  Scope.cpp  SemanticAnalyzer.cpp  SourceFile.cpp  SourceLocation.cpp  SourceStream.cpp  SymbolType.cpp  Token.cpp  TokenStream.cpp  TypeContract.cpp  ace-c.cpp  ast_iterator.cpp  ast_visitor.cpp  compilation_unit.cpp  compiler.cpp  compiler_error.cpp  configuration.cpp  error_list.cpp  identifier.cpp  identifier_table.cpp  keywords.cpp  lexer.cpp  main.cpp  (+14 more)
src/ace-c/ast/: AstActionExpression.cpp  AstAliasDeclaration.cpp  AstArgument.cpp  AstArgumentList.cpp  AstArrayAccess.cpp  AstArrayExpression.cpp  AstBinaryExpression.cpp  AstBlock.cpp  AstBlockExpression.cpp  AstCallExpression.cpp  AstClosure.cpp  AstConstant.cpp  AstDeclaration.cpp  AstDirective.cpp  AstEnumExpression.cpp  AstEvent.cpp  AstExpression.cpp  AstFalse.cpp  AstFileImport.cpp  AstFloat.cpp  AstForLoop.cpp  AstFunctionCall.cpp  AstFunctionDefinition.cpp  AstFunctionExpression.cpp  AstGeneratedExpression.cpp  AstHasExpression.cpp  AstIdentifier.cpp  AstIfStatement.cpp  AstImport.cpp  AstInteger.cpp  AstLocalImport.cpp  AstMember.cpp  AstMemberAccess.cpp  AstMetaBlock.cpp  AstMixin.cpp  AstMixinDeclaration.cpp  AstModuleAccess.cpp  AstModuleDeclaration.cpp  AstModuleImport.cpp  AstModuleProperty.cpp  (+75 more)
src/ace-c/builtins/: Builtins.cpp
src/ace-c/dis/: ByteStream.cpp  DecompilationUnit.cpp  byte_stream.cpp  decompilation_unit.cpp
src/ace-c/emit/: AIRCode.cpp  Buildable.cpp  BuildableVisitor.cpp  BytecodeChunk.cpp  BytecodeUtil.cpp  InstructionBlock.cpp  InstructionObject.cpp  InstructionStream.cpp  StaticObject.cpp  StorageOperation.cpp  instruction_stream.cpp  static_object.cpp
src/ace-c/emit/aex/: AEXGenerator.cpp
src/ace-c/emit/aex-builder/: AEXGenerator.cpp  InternalByteStream.cpp
src/ace-c/emit/cppgen/: CppGenerator.cpp
src/ace-c/meta-scripting/: API.cpp  Meta.cpp
src/ace-c/type-system/: BuiltinTypes.cpp  SymbolType.cpp
src/ace-jit/: CMakeLists.txt
src/ace-runtime/: CMakeLists.txt  ace-runtime.cpp  io.cpp  random.cpp  stopwatch.cpp
src/ace-vm/: Array.cpp  BytecodeStream.cpp  CMakeLists.txt  EventArray.cpp  Exception.cpp  HeapMemory.cpp  HeapValue.cpp  ImmutableString.cpp  InstructionHandler.cpp  Object.cpp  Slice.cpp  StackMemory.cpp  StaticMemory.cpp  Tracemap.cpp  TypeInfo.cpp  VM.cpp  VMState.cpp  Value.cpp  ace-vm.cpp  array.cpp  bytecode_stream.cpp  exception.cpp  heap_memory.cpp  heap_value.cpp  main.cpp  object.cpp  stack_memory.cpp  stack_value.cpp  static_memory.cpp  type_info.cpp  value.cpp  vm.cpp  vm_state.cpp
src/aex-builder/: AEXGenerator.cpp  CMakeLists.txt  InternalByteStream.cpp
src/ast/: ast_binary_expression.cpp  ast_block.cpp  ast_braces.cpp  ast_constant.cpp  ast_declaration.cpp  ast_expression.cpp  ast_false.cpp  ast_float.cpp  ast_function_call.cpp  ast_function_definition.cpp  ast_if_statement.cpp  ast_import.cpp  ast_integer.cpp  ast_local_import.cpp  ast_module_declaration.cpp  ast_null.cpp  ast_parameter.cpp  ast_statement.cpp  ast_string.cpp  ast_true.cpp  ast_variable.cpp  ast_variable_declaration.cpp  ast_void.cpp  ast_while_loop.cpp
src/athens/: ast_iterator.cpp  ast_visitor.cpp  compilation_unit.cpp  compiler.cpp  compiler_error.cpp  error_list.cpp  identifier.cpp  identifier_table.cpp  keywords.cpp  lexer.cpp  main.cpp  module.cpp  object_type.cpp  operator.cpp  optimizer.cpp  parser.cpp  scope.cpp  semantic_analyzer.cpp  source_file.cpp  source_location.cpp  source_stream.cpp  token.cpp  token_stream.cpp
src/athens/ast/: ast_binary_expression.cpp  ast_block.cpp  ast_constant.cpp  ast_declaration.cpp  ast_expression.cpp  ast_false.cpp  ast_float.cpp  ast_function_call.cpp  ast_function_definition.cpp  ast_function_expression.cpp  ast_identifier.cpp  ast_if_statement.cpp  ast_import.cpp  ast_integer.cpp  ast_local_import.cpp  ast_member_access.cpp  ast_module_declaration.cpp  ast_null.cpp  ast_object.cpp  ast_parameter.cpp  ast_print_statement.cpp  ast_return_statement.cpp  ast_statement.cpp  ast_string.cpp  ast_true.cpp  ast_try_catch.cpp  ast_type_definition.cpp  ast_type_specification.cpp  ast_undefined.cpp  ast_variable.cpp  ast_variable_declaration.cpp  ast_void.cpp  ast_while_loop.cpp
src/athens/dis/: byte_stream.cpp  decompilation_unit.cpp
src/athens/emit/: instruction_stream.cpp  static_object.cpp
src/common/: utf8.cpp
src/emit/: instruction_stream.cpp
(+432 files in other folders)
